@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 1.1-6
-Date: 2015-03-14
+Version: 1.2-0
+Date: 2015-03-16
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
