@@ -54,8 +54,8 @@ export("Cholesky", ".SuiteSparse_version",
        "expm",
        "facmul", "fac2sparse", "fac2Sparse",
        "forceSymmetric",
-       ## 'graph' package (and class) related:
-       "T2graph", "graph2T",
+       "T2graph", "graph2T", ## <- 'graph' package (and class) related
+       "anyDuplicatedT", "uniqTsparse",
        "isTriangular",
        "isDiagonal",
        "isLDL",
@@ -87,6 +87,7 @@ if(getRversion() < "2.15.0")
     export(".M.classEnv")
 
 ## substitute for using  cbind() / rbind()
+## .Deprecated() for R version >= 3.2.0 [2015-04]:
 export("cBind",
        "rBind")
 
